--- a/home.html
+++ b/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app='facilitiesApp'>
+<html ng-app='facilitiesApp'
 
 
 <head>
@@ -57,7 +57,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-                <a class="navbar-brand" href="#">Formation 22</a>
+                <a class="navbar-brand" href="#">Vet Ap</a>
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav">
@@ -65,7 +65,7 @@
                     <li><a href="#">About</a></li>
                     <li><a href="http://www.realwarriors.net/family/support/preventsuicide.php">Family Resourses</a></li>
                     <li><a href="https://www.veteranscrisisline.net">Resourses</a></li>
-                    <li ng-click="fCtrl.getFacilities()"><a href="#">VA Facilties</a></li>
+                    <li><a href="facilities.html">VA Facilties</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
@@ -120,7 +120,7 @@
         <a href="#/contacts" button type="button" class="btn btn-default btn-circle btn-xl"><i class="glyphicon glyphicon-user"></i></button></a>
         <a href="#/plan" button type="button" class="btn btn-primary btn-circle btn-xl"><i class="glyphicon glyphicon-tree-deciduous"></i></button></a>
         <!-- <a href="api.html" button type="button" class="btn btn-warning btn-circle btn-xl"><i class="glyphicon glyphicon-link"></i></button></a> -->
-        <button type="button" class="btn btn-info btn-circle btn-xl"><i class="glyphicon glyphicon-ok"></i></button>
+        <!-- <button type="button" class="btn btn-info btn-circle btn-xl"><i class="glyphicon glyphicon-ok"></i></button> -->
     </footer>
 
 
