--- a/public/login.html
+++ b/public/login.html
@@ -4,6 +4,7 @@
         <title>Login</title>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular-route.js"></script>
+        <link rel="stylesheet" href="login.css">
         <script src="/js/main.js"></script>
         <script src="/js/module.auth.js"></script>
 
@@ -14,7 +15,7 @@
         </style>
     </head>
     <body ng-controller='authController as auth'>
-        <h1><a href="/home">Homepage</a></h1>
+        <h1><a href="/home">Project 22</a></h1>
         <form ng-submit="auth.login.submit($event)">
             <h1>Login!</h1>
             <fieldset>
